<resources>
    <string name="app_name">Scheduler</string>
    <string name="add">ADD</string>
    <string name="enter_new_note">note</string>
    <string name="click_to_remove">instructions</string>

    <string name="token">token</string>
    <string name="username">username</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="send_mode_1">Echo STOMP</string>
    <string name="send_mode_2">Echo REST</string>
    <string name="connect_stomp">Connect STOMP</string>
    <string name="disconnect_stomp">DISCONNECT STOMP</string>

    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>

    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="showSideBar">显示侧滑栏</string>
    <string name="tempName">Kuhn</string>
    <string name="project1_title">软件工程课程设计</string>
    <string name="project2_title">数据库课程设计</string>
    <string name="project3_title">操作系统课程设计</string>
    <string name="project1_desc">已完成</string>
    <string name="project2_desc">已完成</string>
    <string name="project3_desc">已完成</string>
    <string name="projectTitle">项目名称</string>
    <string name="projectDesc">项目描述</string>
    <string name="passwordNull">密码不能为空</string>
    <string name="length">密码必须少于16位</string>
    <string name="digitalorletter">密码只能是字母或数字</string>
    <string name="notthesame">密码不一致</string>
    <string name="uniqueusername">用户名已被注册</string>
    <string name="usernameNull">用户名不能为空</string>
    <string name="share">SHARE</string>
    <string name="readmore">READMORE</string>
    <string name="set">设置</string>
    <string name="projectsInprocess">正在进行的项目</string>
    <string name="more">更多</string>
    <string name="about">关于</string>
    <string name="history">历史项目</string>
    <string name="info">账号信息</string>
    <string name="logout">退出登录</string>
    <string name="notifications">通知</string>
    <string name="teammates">队友信息</string>
    <string name="personaltags">技术标签</string>
    <string name="projectName">项目名称</string>
    <string name="projectmember">项目成员</string>
    <string name="owner">你</string>
    <string name="addmember">添加成员</string>
    <string name="ddl">项目截止日期</string>
    <string name="cancel">取消</string>
    <string name="ok">确认</string>
    <string name="create">新建</string>
    <string name="startYear">2017</string>
    <string name="endYear">2050</string>
    <string name="modifyPhotoText">头像</string>
    <string name="modifyNameText">更改名字</string>
    <string name="modifyPwdText">更改密码</string>
    <string name="txCurrentPassword">当前密码</string>
    <string name="txNewPassword">新密码</string>
    <string name="submitModify">提交修改</string>
    <string name="txConfirm">重输密码</string>
    <string name="unburned">待燃烧</string>
    <string name="burning">燃烧中</string>
    <string name="burned">已燃烧</string>
    <string name="ashed">燃尽</string>
    <string name="add_meeting">Add a meeting</string>
    <string name="sprint_bb">接受</string>
    <string name="sprint_bg">完成</string>
    <string name="sprint_bd">审核</string>
    <string name="sprint_bo">燃尽</string>

    <string name="tab1">冲刺</string>
    <string name="tab2">会议</string>
    <string name="tab3">成员</string>
    <string name="tab4">进度</string>

    <string name="sprint_name">冲刺名称</string>
    <string name="sprint_content">冲刺内容</string>
    <string name="sprint_worktime">所需时间</string>
    <string name="sprint_user">工作成员</string>

    <string name="meeting_name">会议名称</string>
    <string name="meeting_member">添加成员</string>

    <string name="user_info">用户信息</string>
    <string name="project_toolbar">项目信息</string>
</resources>
