<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_history"
            android:icon="@drawable/ic_action_history"
            android:title="@string/history"/>
        <item
            android:id="@+id/menu_info"
            android:icon="@drawable/ic_action_info"
            android:title="@string/info"/>
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_action_logout"
            android:title="@string/logout"/>


    </group>

    <!--二级菜单-->
    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/menu_about"
                android:icon="@drawable/ic_action_about"
                android:title="@string/about"/>
            <item
                android:id="@+id/menu_set"
                android:icon="@drawable/ic_action_set"
                android:title="@string/set"/>
        </menu>
    </item>
</menu>