<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/color_48baf3">

        <RadioGroup
            android:id="@+id/main_top_rg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/btn_unbruned"
                android:layout_width="76dp"
                android:layout_height="29dp"
                android:background="@drawable/top_r_bg"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/unburned"
                android:textColor="@drawable/top_r_text"
                android:textColorHighlight="@color/color_48baf3"
                android:textSize="14dp"/>

            <RadioButton
                android:id="@+id/btn_burning"
                android:layout_width="76dp"
                android:layout_height="29dp"
                android:layout_marginLeft="-1dp"
                android:background="@drawable/top_r_bg"
                android:button="@null"
                android:gravity="center"
                android:text="@string/burning"
                android:textColor="@drawable/top_r_text"
                android:textColorHighlight="@color/color_48baf3"
                android:textSize="14dp"/>


            <RadioButton
                android:id="@+id/btn_burned"
                android:layout_width="76dp"
                android:layout_height="29dp"
                android:layout_marginLeft="-1dp"
                android:background="@drawable/top_r_bg"
                android:button="@null"
                android:gravity="center"
                android:text="@string/burned"
                android:textColor="@drawable/top_r_text"
                android:textColorHighlight="@color/color_48baf3"
                android:textSize="14dp"/>


            <RadioButton
                android:id="@+id/btn_ashed"
                android:layout_width="76dp"
                android:layout_height="29dp"
                android:layout_marginLeft="-1dp"
                android:background="@drawable/top_r_bg"
                android:button="@null"
                android:gravity="center"
                android:text="@string/ashed"
                android:textColor="@drawable/top_r_text"
                android:textColorHighlight="@color/color_48baf3"
                android:textSize="14dp"/>
        </RadioGroup>

    </RelativeLayout>

</LinearLayout>
